--- a/src/styles/Shelf.module.css
+++ b/src/styles/Shelf.module.css
@@ -26,7 +26,7 @@
     grid-auto-columns: 40%;
     grid-template-rows: repeat(1, auto);
     margin-top: 50px;
-    overflow-x: auto;
+    overflow-x: scroll;
   }
   .shelf::-webkit-scrollbar {
     display: none;
@@ -39,7 +39,7 @@
     grid-auto-columns: 80%;
     grid-template-rows: repeat(1, auto);
     margin-top: 50px;
-    overflow-x: auto;
+    overflow-x: scroll;
   }
   .shelf::-webkit-scrollbar {
     display: none;
@@ -52,8 +52,7 @@
     grid-auto-columns: 90%;
     grid-template-rows: repeat(1, auto);
     margin-top: 50px;
-
-    overflow-x: auto;
+    overflow-x: scroll;
   }
   .shelf::-webkit-scrollbar {
     display: none;
