--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,6 @@
 body {
   font-family: Ubuntu;
   margin: 0;
-  overflow-x: scroll;
 }
 body::-webkit-scrollbar {
   display: none;
